# Relay-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.vi.md  ROLL_OUT.md  diff.txt  diff_policy.txt  diff_policy_check.txt  diff_support_bundle.txt  diff_support_request.txt  evidence_report.md  extract_schema.py  generated_schema.yaml  old_cli.py  old_cli_safe.py  pyproject.toml  python_kit.py  relay_kit.py  relay_kit_legacy.py  relay_kit_public_cli.py  run-relay-kit-checkpoint.cmd  run-relay-kit-summary.cmd  skills.manifest.yaml
.relay-kit/: trust-policy.yaml
ai_kit_v3/: __init__.py  adapters.py  generator.py
docs/: codex-merge-prompt.md  codex-round3-merge-prompt.md  deep-checkpoint-open-issues-2026-04-18.md  discipline-utilities-baseline-proposal.md  discipline-utilities-gauntlet-task-matrix.md  discipline-utilities-gauntlet.md  gap-matrix.md  how-to-write-skills.md  migration-order.md  public-docs-index.md  relay-kit-ai-kit-migration-matrix.md  relay-kit-antigravity-factcheck-v2.md  relay-kit-beta-soak-log.md  relay-kit-claude-12-adoption-matrix.md  relay-kit-commercial-dossier.md  relay-kit-commercial-ownership.md  relay-kit-compatibility-cycle.md  relay-kit-compatibility-log.md  relay-kit-context-continuity-design-note.md  relay-kit-context-continuity.md  relay-kit-delegation-control.md  relay-kit-enterprise-bundle.md  relay-kit-migration-timeline.txt  relay-kit-mmo-api-realism-research.md  relay-kit-phase3-cutover-log.md  relay-kit-phase3-rename-runbook.md  relay-kit-policy-packs.md  relay-kit-publication-plan.md  relay-kit-pulse-report.md  (+17 more)
(+763 files in other folders)
