[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-kit"
version = "3.2.0"
description = "Relay-kit public installer CLI for coding-agent runtime generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Relay-kit" }]

[project.scripts]
relay-kit = "relay_kit_public_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai_kit_v3*"]
